--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href = "https://alter-net-codes.github.io/alternetcodes.org/home";
+  window.location.href = "https://alter-net-codes.github.io/alternetcodes/home";
 </script>
