--- a/home.html
+++ b/home.html
@@ -1,1 +1,4 @@
-<p>39204734085</p>
+<h>Alter Net codes</h>
+<p>We are a small programming company and we make software that just works™️</p>
+<a href="https://alter-net-codes.github.io/alternetcodes/app/signup">something</a>
+<a href="https://alter-net-codes.github.io/alternetcodes/app/login">something</a>
