--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <h>Alter Net codes</h>
 <p>We are a small programming company and we make software that just works™️</p>
 <ul>
-  <a href="https://alter-net-codes.github.io/alternetcodes/app/signup">signup</a>
-  <a href="https://alter-net-codes.github.io/alternetcodes/app/login">login</a>
+  <li><a href="https://alter-net-codes.github.io/alternetcodes/app/signup">signup</a></li>
+  <li><a href="https://alter-net-codes.github.io/alternetcodes/app/login">login</a></li>
 </ul>
