--- a/app/signup.html
+++ b/app/signup.html
@@ -1,3 +1,3 @@
 <input type="text" id="username" name="username" placeholder="Enter your username">
 <input type="text" id="password" name="password" placeholder="Enter your password">
-<button>signup</button>
+<button onclick="alert('The button was clicked!')">signup</button>
