--- a/app/login.html
+++ b/app/login.html
@@ -1,3 +1,4 @@
 <input type="text" id="username" name="username" placeholder="Enter your username">
 <input type="text" id="password" name="password" placeholder="Enter your password">
-<button>login</button>
+<button onclick="alert('The button was clicked!')">login</button>
+
