--- a/app/login.html
+++ b/app/login.html
@@ -1,4 +1,32 @@
 <input type="text" id="username" name="username" placeholder="Enter your username">
 <input type="text" id="password" name="password" placeholder="Enter your password">
-<button onclick="alert('The button was clicked!')">login</button>
-
+<script>
+  password = document.getElementById("password");
+  password = password.value;
+  async function hashStringSHA256(message) {
+    // Encode the string as a Uint8Array
+    const msgBuffer = new TextEncoder().encode(message);
+  
+    // Hash the message using SHA-256
+    const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
+  
+    // Convert the ArrayBuffer to a hex string
+    const hashArray = Array.from(new Uint8Array(hashBuffer));
+    const hashHex = hashArray.map(b => ('00' + b.toString(16)).slice(-2)).join('');
+  
+    return hashHex;
+  }
+  hashStringSHA256(password)
+  // send to the backend
+  // will change to work with the actual backend later.
+  const res = await fetch("https://example.com/userman/signup", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({username: username, password: password})
+      });
+      const text = await res.text();
+      document.getElementById("signupOutput").innerText = text;
+  }
+  //shit
+  window.location.href = "https://alter-net-codes.github.io/alternetcodes/home";
+</script>
